Fix layout on several views. Fix alignment on statistic controls.

--- a/Source/Panama/Controls/GridRowDisplay/GridRowDisplay.xaml
+++ b/Source/Panama/Controls/GridRowDisplay/GridRowDisplay.xaml
@@ -15,6 +15,7 @@
             Foreground="{Binding HeaderForeground,ElementName=PART_Control}"
             Width="{Binding HeaderWidth,ElementName=PART_Control}"
             FontSize="{Binding HeaderFontSize,ElementName=PART_Control}"
-            Content="{Binding Header,ElementName=PART_Control}"/>
+            Content="{Binding Header,ElementName=PART_Control}"
+            VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
