--- a/Source/Panama/View/UserNoteView.xaml
+++ b/Source/Panama/View/UserNoteView.xaml
@@ -27,14 +27,20 @@
             <view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />
             <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
         </Grid>
+        
         <!-- Main data grid to display the tabular data  -->
-        <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}">
-            <DataGrid.ContextMenu>
-                <ContextMenu ItemsSource="{Binding MenuItems}"/>
-            </DataGrid.ContextMenu>
-        </DataGrid>
+        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderGridContainer}">
+            <DataGrid ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}">
+                <DataGrid.ContextMenu>
+                    <ContextMenu ItemsSource="{Binding MenuItems}"/>
+                </DataGrid.ContextMenu>
+            </DataGrid>
+        </Border>
+        
         <!-- Nested editing control on the right -->
-        <view:UserNoteEdit Grid.Row="1" Grid.Column="1" Visibility="{Binding EditVisibility}"/>
+        <Border Grid.Row="1" Grid.Column="1" Style="{StaticResource BorderGridContainer}">
+            <view:UserNoteEdit Visibility="{Binding EditVisibility}"/>
+        </Border>
     </Grid>
     <!-- end main grid-->
 </UserControl>
